overflow problem fixed

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Open Sans", sans-serif;
+    overflow-x: hidden;
 }
 body {
     background-color: #f5f5f5;
@@ -48,5 +49,4 @@ a {
     .btn {
         padding: 14px 22px;
     }
-    
 }
